some java 1.5 useage, and replaced a exception with a warning, because pages are failing because of that here
git-svn-id: https://scm.mmbase.org/mmbase/trunk@22205 91430c5f-d668-0410-9e7d-dd663366dcfd